common/force-app/main/default/objects/Log_Message__c/Log_Message__c.object-meta.xml
<CustomObject>
    <label>Log Message</label>
    <nameField>
        <displayFormat>LM-{0000}</displayFormat>
        <label>Log Message Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Log Message</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>