common/force-app/main/default/objects/Log_Message__c/fields/DML_info__c.field-meta.xml
<CustomField>
    <fullName>DML_info__c</fullName>
    <label>DML info</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>