common/force-app/main/default/objects/Log_Message__c/fields/log_message__c.field-meta.xml
<CustomField>
    <fullName>log_message__c</fullName>
    <label>log message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>