common/force-app/main/default/objects/Log_Message__c/fields/Record_details__c.field-meta.xml
<CustomField>
    <fullName>Record_details__c</fullName>
    <label>Record details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>