common/force-app/main/default/objects/Log_Message__c/fields/refrence_Id__c.field-meta.xml
<CustomField>
    <fullName>refrence_Id__c</fullName>
    <label>refrence Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>