common/force-app/main/default/objects/Log_Message__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <length>225</length>
    <type>Text</type>
</CustomField>