common/force-app/main/default/objects/Log_Message__c/fields/Source_Function__c.field-meta.xml
<CustomField>
    <fullName>Source_Function__c</fullName>
    <label>Source Function</label>
    <length>225</length>
    <type>Text</type>
</CustomField>