common/force-app/main/default/objects/Log_Message__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Application__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Record_details__c</columns>
    <columns>Status_Code__c</columns>
    <columns>Source_Function__c</columns>
    <columns>Type__c</columns>
    <columns>Source__c</columns>
    <columns>Stack_Trace__c</columns>
    <columns>log_message__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Error</value>
    </filters>
    <label>All</label>
</ListView>